<resources>
    <string name="app_name">JournalShare</string>
    <string name="setting_label">Settings</string>
    <string name="notifications_label">Enable Notifications</string>
    <string name="sharing_label">Enable Sharing</string>
    <string name="font_label">Font:</string>
    <string name="volume_label">App Volume:</string>
    <string name="background_label">Background</string>
    <string name="entry_default_title">Title</string>
    <string name="toast_share">You shared this journal entry!</string>
    <string name="toast_camera">This will bring up the camera to add a picture to your journal entry.</string>
    <string name="toast_map">There will soon be journal entries on here for you to tap and view.</string>
    <string name="title_activity_maps">Map</string>

    <string name="settings_bg">Background Image</string>

    <string name="start_polling">Enable notifications</string>
    <string name="stop_polling">Disable notifications</string>
    <string name="check_journal">Check your entries!</string>

</resources>
